# NLP-Challenge

./: .gitignore  app.py  crewai_flask_service.py  init.ipynb  report.md  requirements.txt  test_llm.py  test_tool.py  tools.py
Documentor/: chunk_vector_store.py  main.py  rag.py  test_croma_connection.py  tools.py
Documentor/chromadb/: chroma.sqlite3
chroma_data/: chroma.sqlite3
config/: agents.yaml  tasks.yaml
personalized_learning_assistant/: README.md  pyproject.toml  report.md
personalized_learning_assistant/src/personalized_learning_assistant/: crew.py  main.py
