[project]
name = "personalized_learning_assistant"
version = "0.1.0"
description = "personalized-learning-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
personalized_learning_assistant = "personalized_learning_assistant.main:run"
run_crew = "personalized_learning_assistant.main:run"
train = "personalized_learning_assistant.main:train"
replay = "personalized_learning_assistant.main:replay"
test = "personalized_learning_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
